SFUSA/force-app/main/default/objects/SAP_Company_Code__c/fields/SAP_Company_Code_Name_Mask__c.field-meta.xml
<CustomField>
        <fullName>SAP_Company_Code_Name_Mask__c</fullName>
        <formula>IF(  Name = 'USC0', 'Global ('&amp; Name &amp; ')', 'US ('&amp; Name &amp; ')')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Company Code Name Mask</label>
        <type>Text</type>
    </CustomField>